--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.3",
     "@types/qs": "^6.9.7",
@@ -24,6 +25,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cheerio": "1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "qs": "^6.11.2"
   }
